<resources>
    <string name="app_name">CodepunkDemo</string>
    <string name="title_activity_interactive_image_view">InteractiveImageViewActivity</string>
    <string name="menu_controls">Controls</string>

    <string name="label_drawable">Drawable:</string>
    <string name="label_image">Image:</string>
    <string name="label_scale_type">Scale Type:</string>
    <string name="label_image_pivot">Image Pivot:</string>
    <string name="label_image_scale">Image Scale:</string>
    <string name="label_image_pivot_x">Image Pivot X:</string>
    <string name="label_image_pivot_y">Image Pivot Y:</string>
    <string name="label_image_scale_x">Image Scale X:</string>
    <string name="label_image_scale_y">Image Scale Y:</string>
    <string name="label_reset">Reset</string>
    <string name="label_scale_2">Scale x2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
