<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/large_margin"
    android:background="@color/color_interactive_image_view_demo_drawer_color"
    android:clickable="true"
    tools:context="com.codepunk.demo.interactiveimageview2.InteractinatorControlsFragment"
    tools:ignore="KeyboardInaccessibleWidget">

    <TextView
        android:id="@+id/label_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_image" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:entries="@array/image_names" />

    <TextView
        android:id="@+id/label_scale_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_scale_type"
        android:layout_marginTop="@dimen/standard_margin" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_scale_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:entries="@array/scale_types" />

    <com.codepunk.demo.FloatSeekBarLayout
        android:id="@+id/layout_seek_bar_image_pivot_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:label="@string/label_image_pivot_x"
        android:format="0" />

    <com.codepunk.demo.FloatSeekBarLayout
        android:id="@+id/layout_seek_bar_image_pivot_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:label="@string/label_image_pivot_y"
        android:format="0" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin">

        <ToggleButton
            android:id="@+id/btn_lock"
            android:layout_width="@dimen/touch_target_size"
            android:layout_height="@dimen/touch_target_size"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textOff=""
            android:textOn=""
            android:padding="@dimen/default_icon_in_touch_target_padding"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_lock_white_24dp"
            android:checked="true" />

        <com.codepunk.demo.FloatSeekBarLayout
            android:id="@+id/layout_seek_bar_image_scale_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/btn_lock"
            android:layout_toStartOf="@id/btn_lock"
            android:label="@string/label_image_scale_x"
            android:format="0.00" />

        <com.codepunk.demo.FloatSeekBarLayout
            android:id="@+id/layout_seek_bar_image_scale_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/layout_seek_bar_image_scale_x"
            android:layout_toLeftOf="@id/btn_lock"
            android:layout_toStartOf="@id/btn_lock"
            android:label="@string/label_image_scale_y"
            android:format="0.00" />

    </RelativeLayout>

</LinearLayout>
